# OpenModelicaCompilerForPython

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  TODO.md  for-developers.md  make.bat  pyproject.toml  requirements.bootstrap.txt  requirements.lint.txt  requirements.test.txt  setup.cfg  setup.py
.github/: pretest.py
.github/workflows/: flake8.yml  lint.yml  pytest-omc1.13.0.yml  pytest-omc1.13.2.yml  pytest-omc1.14.1.yml  pytest-omc1.14.2.yml  pytest-omc1.16.0.yml  pytest-omc1.16.1.yml  pytest-omc1.16.5.yml  pytest-omc1.17.0.yml  pytest-omc1.18.0.yml  pytest.yml  python-package.yml  test.yml
.pre-commit/: poetry_export_requirements.py
bootstrap/: README.md  __init__.py  __main__.py  array.py  ast_generator.py  backport.py  code.py  generate.py  parser.py  requirements.txt  session.py  test_bootstrap.py  util.py
bootstrap/interface/: __init__.py  v_1_13.yaml  v_1_14.yaml  v_1_15.yaml  v_1_16.yaml  v_1_17.yaml  v_1_18.yaml  v_1_19.yaml  v_1_20.yaml  v_1_21.yaml  v_1_22.yaml  v_1_23.yaml  v_1_24.yaml
bootstrap/interface_xml/: __init__.py  __main__.py  omc_interface.v_1_13_0.xml  omc_interface.v_1_14_0.xml  omc_interface.v_1_17_0.xml  omc_interface.v_1_19_2.xml
bootstrap/module_py/: __init__.py  code.py
bootstrap/parser/: __init__.py  visitor.py
bootstrap/profile/: __init__.py  base.py  component.py  type_declaration.py
bootstrap_/: __init__.py  ast_generator.py  session.py  test_bootstrap.py  util.py
bootstrap_/interface_xml/: omc_interface.v_1_15_0-dev.xml  omc_interface.v_1_16_0.xml  omc_interface.v_1_18_0.xml  omc_interface.v_1_20_0.xml  omc_interface.xsd
bootstrap_/module_py/: __init__.py  code.py
docker-images/openmodelica-python/: Dockerfile
document/: conf.py  index.rst  modules.rst  omc4py.rst  omc4py.v_1_13.OpenModelica.Internal.Architecture.rst  omc4py.v_1_13.OpenModelica.Internal.rst  omc4py.v_1_13.OpenModelica.Scripting.Experimental.rst  omc4py.v_1_13.OpenModelica.Scripting.Internal.Time.rst  omc4py.v_1_13.OpenModelica.Scripting.Internal.rst  omc4py.v_1_13.OpenModelica.Scripting.rst  omc4py.v_1_13.OpenModelica.UsersGuide.ReleaseNotes.rst  omc4py.v_1_13.OpenModelica.UsersGuide.rst  omc4py.v_1_13.OpenModelica.rst  omc4py.v_1_13.rst  omc4py.v_1_14.OpenModelica.AutoCompletion.Annotations.rst  omc4py.v_1_14.OpenModelica.AutoCompletion.rst  omc4py.v_1_14.OpenModelica.Internal.Architecture.rst  omc4py.v_1_14.OpenModelica.Internal.rst  omc4py.v_1_14.OpenModelica.Scripting.Experimental.rst  omc4py.v_1_14.OpenModelica.Scripting.Internal.Time.rst  omc4py.v_1_14.OpenModelica.Scripting.Internal.rst  omc4py.v_1_14.OpenModelica.Scripting.rst  omc4py.v_1_14.OpenModelica.UsersGuide.ReleaseNotes.rst  omc4py.v_1_14.OpenModelica.UsersGuide.rst  omc4py.v_1_14.OpenModelica.rst  omc4py.v_1_14.rst  omc4py.v_1_15.OpenModelica.AutoCompletion.Annotations.rst  omc4py.v_1_15.OpenModelica.AutoCompletion.rst  omc4py.v_1_15.OpenModelica.Internal.Architecture.rst  omc4py.v_1_15.OpenModelica.Internal.rst  omc4py.v_1_15.OpenModelica.Scripting.Experimental.rst  omc4py.v_1_15.OpenModelica.Scripting.Internal.Time.rst  omc4py.v_1_15.OpenModelica.Scripting.Internal.rst  omc4py.v_1_15.OpenModelica.Scripting.rst  omc4py.v_1_15.OpenModelica.UsersGuide.ReleaseNotes.rst  omc4py.v_1_15.OpenModelica.UsersGuide.rst  omc4py.v_1_15.OpenModelica.rst  omc4py.v_1_15.rst  omc4py.v_1_16.OpenModelica.AutoCompletion.Annotations.rst  omc4py.v_1_16.OpenModelica.AutoCompletion.rst  (+82 more)
neo/: __init__.py  enumeration.py  interactive.py  modelica.py  openmodelica.py  parser.py  protocol.py  test_parser.py
neo/session/: __init__.py  _session.py  aio.py  aio.pyi
neo/tests/: aio.pyi  conftest.py  test_parser.py  test_session.py
neo/v_1_13/: __init__.py  _interface.py  aio.pyi
neo/v_1_14/: __init__.py  _interface.py  aio.py  aio.pyi
neo/v_1_16/: __init__.py  _interface.py  aio.py  aio.pyi
neo/v_1_17/: __init__.py  _interface.py  aio.pyi
neo/v_1_18/: __init__.py  _interface.py  aio.pyi
neo/v_1_19/: __init__.py  _interface.py  aio.py  aio.pyi
neo/v_1_20/: __init__.py  _interface.py  aio.pyi
neo/v_1_21/: __init__.py  _interface.py  aio.pyi
omc4py/: __init__.py  _array.py  _array.pyi  _util.py  abstract.py  algorithm.py  backport.py  classes.py  compiler.py  enumeration.py  exception.py  interactive.py  latest.py  meta.py  modelica.py  modelica2.py  openmodelica.py  openmodelica2.py  parser.py  primitive_types.py  protocol.py  session.py  sessions.py  string.py  string2.py  types.py  v_1_13.py  v_1_14.py
omc4py/latest/: __init__.py  aio.py
omc4py/parser/: __init__.py  syntax.py  visitor.py
omc4py/parsers/: __init__.py  syntax.py  visitor.py
omc4py/scripting/: exceptions.py  types.py
omc4py/session/: TODO.md  __init__.py  __main__.py  _session.py  aio.py  aio.pyi  base.py  bootstrap.py  exception.py  parser.py  string.py  syntax.py  types.py  v_1_13_0.py  visitor.py
omc4py/tests/: conftest.py  test_session.py
omc4py/v_1_13/: __init__.py  _interface.py  _omc_interface.py  aio.py  aio.pyi
omc4py/v_1_14/: __init__.py  _interface.py  _omc_interface.py  aio.py  aio.pyi
omc4py/v_1_15/: __init__.py  _interface.py  _omc_interface.py  aio.py  aio.pyi
omc4py/v_1_16/: __init__.py  _interface.py  _omc_interface.py  aio.py  aio.pyi
omc4py/v_1_17/: __init__.py  _interface.py  _omc_interface.py  aio.py  aio.pyi
omc4py/v_1_18/: __init__.py  _interface.py  _omc_interface.py  aio.py  aio.pyi
omc4py/v_1_19/: __init__.py  _interface.py  _omc_interface.py  aio.py  aio.pyi
omc4py/v_1_20/: __init__.py  _interface.py  _omc_interface.py  aio.py  aio.pyi
omc4py/v_1_21/: __init__.py  _interface.py  aio.py  aio.pyi
omc4py/v_1_22/: __init__.py
omc4py/v_1_23/: __init__.py
omc4py/v_1_24/: __init__.py
tests/: __init__.py  conftest.py  requirements.txt  test_array.py  test_classes.py  test_parser.py  test_readme.py  test_session.py  test_string2.py  test_types.py
tests/OpenModelica/: conftest.py  test_session.py
tests/session/: __init__.py  aio.py  aio.pyi  conftest.py  test_session.py
tests/src/: empty.mo
zmq-stubs/: __init__.pyi  asyncio.pyi
(+117 files in other folders)
