[tool.poetry]
name = "OpenModelicaCompiler"
version = "0"
description = "OpenModelica compiler (omc) interface for Python"
repository = "https://github.com/ijknabla/OpenModelicaCompilerForPython"
authors = ["ijknabla <ijknabla@gmail.com>"]
readme = "README.md"
license = "GPL-3.0, OSMC-PL 1.2 (user's choice)"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: User Interfaces",
]
packages = [
    { include = "omc4py"},
]

[tool.poetry.dependencies]
python = "^3.8"
arpeggio = ">=1.6"
exceptiongroup = ">=1.0"
pyzmq = ">=17.0.0"
typing-extensions = ">=3.7.4"
modelicalang = "^0.1.0a2"
tornado = [
    { platform ="win32", version = ">=6.1" },
]

[tool.poetry.group.bootstrap.dependencies]
click = "^8.1.7"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
pydantic = "^2.4.2"
frozendict = "^2.3.8"
importlib-resources = ">=5.10"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.6.1"
pyproject-flake8 = "^5.0.4"
types-arpeggio = {git = "https://github.com/ijknabla/types-arpeggio.git", rev = "0.2.0.0a0.dev4"}
types-pyyaml = "^6.0.12.12"
types-setuptools = "^68.2.0.0"
types-tqdm = "^4.66.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.0.0"
typing-extensions = ">=4.1.0"
importlib-resources = "^6.1.1"

[tool.poetry-version-plugin]
source = "init"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.coverage.report]
exclude_lines = [
    "^\\s*class \\w+\\(Protocol",
    "^\\s*@overload$",
    "^\\s*if TYPE_CHECKING",
    "^\\s*raise NotImplementedError",
    "#\\s*pragma\\s*:\\s*no\\s*cover",
]

[tool.flake8]
exclude = ".venv"

# Allow too-long line in auto-generated modules
per-file-ignores = """
    omc4py/v_*_*/:E501,
"""

[tool.isort]
profile = "black"
line_length = 79
